--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
             font-size: 1.2em;
             color: #555;
             margin-bottom: 10px;
+			white-space: pre-line;
         }
 
         .main-text {
@@ -69,6 +70,7 @@
             line-height: 1.6;
             color: #333;
             margin-bottom: 15px;
+			white-space: pre-line;
         }
 
         .signature {
@@ -77,6 +79,7 @@
             color: #888;
             text-align: right;
             margin-top: 20px;
+			white-space: pre-line;
         }
 		
 		.tab {
