Update Button background

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             width: 100%;
             padding: 20px;
             text-align: center;
-            background-color: #fff;
+            background-color: #97FFFF;
             border: 1px solid #ddd;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             margin-bottom: 20px;
@@ -86,7 +86,7 @@
             cursor: pointer;
             padding: 10px;
             margin: 5px;
-            background-color: #f0f0f0;
+            background-color: #8DEEEE;
             border-radius: 5px;
             display: inline-block;
         }
@@ -94,7 +94,7 @@
         .event-item {
             margin: 10px 0;
             padding: 10px;
-            background-color: #f0f0f0;
+            background-color: #79CDCD;
             border-radius: 5px;
         }
 
