--- a/index.html
+++ b/index.html
@@ -139,6 +139,19 @@
 			color: #fff; /* 激活状态的文本颜色 */
 			font-weight: bold; /* 激活状态的文本加粗 */
 		}
+		
+		#backToTopBtn {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            background-color: rgba(0, 0, 0, 0.5);
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            cursor: pointer;
+            border-radius: 5px;
+            display: none; /* Initially hidden */
+        }
     </style>
 </head>
 <body>
@@ -197,8 +210,9 @@
                 <p class="signature" id="event-signature">簽名部分</p>
             </div>
         </div>
-    </div>
+    </div>	
 </div>
+	<button id="backToTopBtn">回到最上面</button>
 
 <script>
     // 标签页切换逻辑
@@ -319,6 +333,10 @@
 				// 设置 active 状态，并移除其他 tab 的 active 状态
 				document.querySelectorAll('#categories-container .tab').forEach(t => t.classList.remove('active'));
 				tab.classList.add('active');
+				
+				// 自動滾動到events-container
+				<!-- const contentContainer = document.getElementById('events-container'); -->
+				<!-- contentContainer.scrollIntoView({ behavior: 'smooth' }); -->
 			});
 			categoriesContainer.appendChild(tab);
 		});
@@ -501,6 +519,23 @@
 		if (event.state) {
 			displayDetailsByDate(event.state.date, event.state.master, false);
 		}
+	});
+	
+	document.addEventListener('DOMContentLoaded', () => {
+		
+		const backToTopBtn = document.getElementById('backToTopBtn');
+		// backToTopBtn
+		window.addEventListener('scroll', () => {
+			if (window.scrollY > 200) {
+				backToTopBtn.style.display = 'block';
+			} else {
+				backToTopBtn.style.display = 'none';
+			}
+		});
+
+		backToTopBtn.addEventListener('click', () => {
+			window.scrollTo({ top: 0, behavior: 'smooth' });
+		});
 	});
 
 </script>
