--- a/index.html
+++ b/index.html
@@ -168,10 +168,12 @@
 <body>
 
 <div class="container">
-    <!-- 標題區塊 -->
-    <div class="header-container">
-        <h1>桃園TRPG推廣會系統介紹</h1>
-    </div>
+	<a href="https://sleepyknife.github.io/tyntrpg_system/" target="_blank">
+		<!-- 標題區塊 -->
+		<div class="header-container">
+			<h1>桃園TRPG推廣會系統介紹</h1>
+		</div>
+	</a>
 
     <!-- 标签页容器 -->
     <div class="tab-container">
