pc height error fix

--- a/index.html
+++ b/index.html
@@ -793,7 +793,7 @@
 					let settings = {
 						entries: entries,
 						width: parentWidth,   // 依據父容器大小變化
-						height: isMobile? cloudSize+100 : isMobile,
+						height: isMobile? cloudSize+100 : cloudSize,
 						radius: '100%',
 						radiusMin: 75,
 						bgDraw: false, // 背景由 CSS 控制
