add some sentence

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
         <!-- 系统介绍总表的内容可以放在这里 -->
         <p>這裡顯示系统介绍的總表内容。持續整理中。(๑•́ ₃ •̀๑)</p>
 		<p>點選系統會自動跳到該系統介紹，下面ShowAll則會顯示全部內容~</p>
-		<p>(手機頁面點擊文字會跳不過去目標系統還在改，你怎麼這麼著急ㄋ(´･ω･`)</p>
+		<p>(原本覺得列表看起來太無聊讓它動起來，結果看久有點想吐(´･ω･`)</p>
 		
 		<!-- Display Cloud Words -->
 		<div id="word-cloud"></div>
