update image path

--- a/index.html
+++ b/index.html
@@ -807,7 +807,7 @@
 						radius: '100%',
 						radiusMin: 75,
 						bgDraw: false, // 背景由 CSS 控制
-						bgImage: "/image/word-cloud-bg.jpeg",
+						bgImage: "./image/word-cloud-bg.jpeg",
 						opacityOver: 1.0,
 						opacityOut: 0.05,
 						opacitySpeed: 6,
