update some text showing in sc

--- a/index.html
+++ b/index.html
@@ -228,15 +228,15 @@
 
     <!-- 标签页容器 -->
     <div class="tab-container">
-        <span class="tab active" data-tab="system-overview">系统介绍總表</span>
+        <span class="tab active" data-tab="system-overview">系統介绍總表</span>
         <span class="tab" data-tab="event-details">活動日期介绍</span>
     </div>
 
     <!-- 系统介绍总表内容 -->
     <div id="system-overview" class="tab-content active">
-        <h2>系统介绍總表</h2>
+        <h2>系統介绍總表</h2>
         <!-- 系统介绍总表的内容可以放在这里 -->
-        <p>這裡顯示系统介绍的總表内容。持續整理中。(๑•́ ₃ •̀๑)</p>
+        <p>這裡顯示系統介绍的總表内容。持續整理中。(๑•́ ₃ •̀๑)</p>
 		<p>點選系統會自動跳到該系統介紹，下面ShowAll則會顯示全部內容~</p>
 		<p>(原本覺得列表看起來太無聊讓它動起來，結果看久有點想吐(´･ω･`)</p>
 		
@@ -828,7 +828,7 @@
 		block.classList.add('system-detail-block');
 
 		const title = document.createElement('h2');
-		title.textContent = `${system.system} 《${system.system_EN}》- 系统介绍`;
+		title.textContent = `${system.system} 《${system.system_EN}》- 系統介绍`;
 		block.appendChild(title);
 
 		// 图片1
