--- a/index.html
+++ b/index.html
@@ -786,7 +786,7 @@
 			console.log("執行 displaySystemDetails:", systemName, shouldUpdateUrl);
 
 			if (filteredSystem) {
-				document.getElementById('system-title').textContent = `${filteredSystem.system} 《${filteredSystem.system_EN}》- 系统介绍`;
+				document.getElementById('system-title').textContent = `${filteredSystem.system} 《${filteredSystem.system_EN}》- 系統介绍`;
 				
 				// 更新图片1 (Always show)
 				const imageElement1 = document.getElementById('system-image1');
