--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <script>
   // 檢查視窗寬度是否小於 600，如果是就導向 index_mobile.html
-  console.log(screen.width);
-  if (screen.width < 600 && !location.pathname.includes("index_mobile.html")) {
-    location.href = "index_mobile.html" + location.search;
-  }
+//   console.log(screen.width);
+//   if (screen.width < 600 && !location.pathname.includes("index_mobile.html")) {
+//     location.href = "index_mobile.html" + location.search;
+//   }
 </script>
 <!DOCTYPE html>
 <html lang="en">
